...
        android:layout_height="wrap_content"
        android:background="@color/md_chrome_bg"
        app:elevation="0dp"
        app:liftOnScroll="false">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/editor_toolbar"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@color/md_chrome_bg"
            app:navigationContentDescription="@string/action_back"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:navigationIconTint="@color/md_chrome_on_bg"
...
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="?attr/colorSurface">

        <io.github.rosemoe.sora.widget.CodeEditor
            android:id="@+id/editor"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ProgressBar
            android:id="@+id/editor_progress"
            style="?android:attr/progressBarStyleSmall"
...
